apps/production/mealie-rag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mealie-rag
  name: mealie-rag
spec:
  ingressClassName: traefik
  rules:
  - host: mealie-rag.prod.andlogreg.work
    http:
      paths:
      - backend:
          service:
            name: mealie-rag
            port:
              number: 7860
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mealie-rag-api
  name: mealie-rag-api
spec:
  ingressClassName: traefik
  rules:
  - host: mealie-rag-api.prod.andlogreg.work
    http:
      paths:
      - backend:
          service:
            name: mealie-rag-api
            port:
              number: 8000
        path: /
        pathType: Prefix
